--- a/app/src/main/res/layout/item_bottom_sheet.xml
+++ b/app/src/main/res/layout/item_bottom_sheet.xml
@@ -46,8 +46,8 @@
             android:id="@+id/batikDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/container_batik_description"
             android:fontFamily="@font/poppins"
             android:padding="15dp"
@@ -56,8 +56,9 @@
             app:layout_constraintStart_toStartOf="@id/divider"
             app:layout_constraintTop_toBottomOf="@id/batikLoc" />
 
+
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/loginBtn"
+            android:id="@+id/makePostBtn"
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
@@ -68,5 +69,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/batikDesc" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/resetBtn"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/button_gradient"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_restart"
+            android:visibility="visible"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="@id/makePostBtn"
+            app:layout_constraintStart_toStartOf="@id/makePostBtn"
+            app:layout_constraintTop_toBottomOf="@id/makePostBtn" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
