--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.UlikBatik" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+        <item name="android:statusBarColor">@color/black</item>
     </style>
 
     <style name="Theme.UlikBatik" parent="Base.Theme.UlikBatik" />
@@ -15,4 +15,5 @@
     <style name="Theme.UlikBatik.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.UlikBatik.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
