--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profile.EditProfileFragment">
+    tools:context=".ui.profile.EditProfileActivity">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/backButton"
@@ -22,13 +23,13 @@
         android:id="@+id/editTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/profile_edit"
-        android:fontFamily="@font/poppins_bold"
-        android:textSize="40sp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/poppins_bold"
         android:paddingStart="20dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/profile_edit"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/backButton"
         tools:ignore="RtlSymmetry" />
 
@@ -36,13 +37,13 @@
         android:id="@+id/profileImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/profile_image"
-        android:fontFamily="@font/poppins"
-        android:textSize="25sp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/poppins"
         android:paddingStart="20dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/profile_image"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editTitle"
         tools:ignore="RtlSymmetry" />
 
@@ -50,38 +51,38 @@
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/ic_profile_fill"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_profile_fill"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profileImage"/>
+        app:layout_constraintTop_toBottomOf="@id/profileImage" />
 
     <TextView
         android:id="@+id/editImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/profile_edit_image"
-        android:fontFamily="@font/poppins"
-        android:textColor="@color/primaryBrown"
-        android:background="@drawable/button_menu_general"
-        android:textSize="15sp"
         android:layout_marginStart="10dp"
+        android:background="@drawable/button_menu_general"
+        android:fontFamily="@font/poppins"
+        android:text="@string/profile_edit_image"
+        android:textColor="@color/primaryBrown"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="@id/imageView"
         app:layout_constraintStart_toEndOf="@id/imageView"
         app:layout_constraintTop_toTopOf="@id/imageView"
-        app:layout_constraintBottom_toBottomOf="@id/imageView"
         tools:ignore="RtlSymmetry" />
 
     <TextView
         android:id="@+id/profileUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/username2"
-        android:fontFamily="@font/poppins"
-        android:textSize="25sp"
         android:layout_marginTop="30dp"
+        android:fontFamily="@font/poppins"
         android:paddingStart="20dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/username2"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         tools:ignore="RtlSymmetry" />
 
@@ -91,26 +92,37 @@
         android:layout_height="60dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/edit_text_grey_field"
+        android:hint="@string/username"
         android:importantForAutofill="no"
         android:inputType="text"
-        android:hint="@string/username"
         android:textColor="@color/black"
-        android:background="@drawable/edit_text_grey_field"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profileUsername" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/loginBtn"
+        android:id="@+id/saveProfileBtn"
         android:layout_width="100dp"
         android:layout_height="60dp"
+        android:layout_marginHorizontal="55dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/button_gradient"
+        android:fontFamily="@font/poppins_bold"
         android:text="@string/save"
         android:textColor="@color/white"
-        android:fontFamily="@font/poppins_bold"
-        android:background="@drawable/button_gradient"
-        android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="55dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editUsername"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editUsername" />
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
