--- a/app/src/main/res/layout/item_post_profile.xml
+++ b/app/src/main/res/layout/item_post_profile.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="23dp"
+    android:id="@+id/itemPost"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
