--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -10,7 +10,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/ic_menu"
         android:contentDescription="@string/btn_dashboard"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,28 +18,19 @@
         tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/helloTv"
+        android:id="@+id/appname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/drawer_hello"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"
+        android:fontFamily="@font/gfs_didot"
+        android:text="@string/app_name2"
+        android:textStyle="bold"
+        android:letterSpacing="0.1"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@id/usernameTv"
-        app:layout_constraintStart_toEndOf="@id/menuBtn"
-        app:layout_constraintTop_toTopOf="@id/menuBtn" />
-
-    <TextView
-        android:id="@+id/usernameTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:fontFamily="@font/poppins"
-        android:text="@string/username"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@id/menuBtn"
-        app:layout_constraintStart_toEndOf="@id/menuBtn"
-        app:layout_constraintTop_toBottomOf="@id/helloTv" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/profileBtn"
@@ -56,19 +47,45 @@
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="@id/menuBtn"
-        app:layout_constraintTop_toBottomOf="@id/usernameTv"
+        app:layout_constraintTop_toBottomOf="@id/menuBtn"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/helloTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/drawer_hello"
+                android:textSize="25sp"
+                app:layout_constraintBottom_toTopOf="@id/usernameTv"
+                app:layout_constraintStart_toStartOf="@id/divider"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/usernameTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins"
+                android:layout_marginStart="10dp"
+                android:text="@string/username"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@id/divider"
+                app:layout_constraintTop_toBottomOf="@id/helloTv" />
+
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/scanBtn"
                 android:layout_width="100dp"
                 android:layout_height="130dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/button_menu_scan"
                 android:drawableTop="@drawable/ic_scan"
                 android:fontFamily="@font/poppins_bold"
@@ -81,7 +98,7 @@
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="@id/divider"
                 app:layout_constraintEnd_toStartOf="@id/catalogBtn"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/usernameTv"
                 tools:ignore="RtlCompat" />
 
             <androidx.appcompat.widget.AppCompatButton
