--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -32,17 +32,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/profileBtn"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="25dp"
-        android:background="@drawable/ic_profile"
-        app:layout_constraintBottom_toBottomOf="@id/menuBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="@string/btn_dashboard"
-        app:layout_constraintTop_toTopOf="@id/menuBtn" />
-
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
@@ -55,6 +44,17 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profileBtn"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="@drawable/ic_profile"
+                android:contentDescription="@string/btn_dashboard"
+                app:layout_constraintEnd_toEndOf="@id/divider"
+                app:layout_constraintBottom_toBottomOf="@id/usernameTv"
+                app:layout_constraintTop_toTopOf="@id/helloTv" />
 
             <TextView
                 android:id="@+id/helloTv"
