--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -130,7 +130,7 @@
                 android:text="@string/dashboard_likes"
                 android:textAlignment="textEnd"
                 android:textColor="@color/primaryBrown"
-                android:textSize="10sp"
+                android:textSize="11sp"
                 app:layout_constraintEnd_toEndOf="@id/divider"
                 app:layout_constraintStart_toEndOf="@id/catalogBtn"
                 app:layout_constraintTop_toTopOf="@id/catalogBtn"
@@ -171,6 +171,7 @@
         android:backgroundTint="@color/primaryYellow"
         android:fontFamily="@font/poppins"
         android:text="@string/scroll_up_button"
+        tools:visibility="visible"
         android:visibility="invisible"
         app:icon="@drawable/ic_top"
         app:iconSize="20dp"
