--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,7 @@
     <style name="Base.Theme.UlikBatik" parent="Theme.Material3.Light.NoActionBar">
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
         <item name="android:statusBarColor">@color/black</item>
+        <item name="android:colorBackground">@color/white</item>
+        <item name="colorAccent">@color/white</item>
     </style>
 </resources>
