--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -159,4 +159,16 @@
         app:layout_constraintEnd_toEndOf="@id/loginBtn"
         app:layout_constraintStart_toEndOf="@id/loginToRegister" />
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
+        app:layout_constraintBottom_toTopOf="@id/loginBtn"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
