--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -218,4 +218,16 @@
         app:layout_constraintEnd_toEndOf="@id/registerBtn"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextInputLayout"
+        app:layout_constraintBottom_toTopOf="@id/registerBtn"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
