--- a/app/src/main/res/layout/activity_detail_catalog.xml
+++ b/app/src/main/res/layout/activity_detail_catalog.xml
@@ -108,7 +108,7 @@
                 android:fontFamily="@font/poppins"
                 android:justificationMode="inter_word"
                 android:text="@string/onboarding_discover_description"
-                android:textSize="11sp"
+                android:textSize="15sp"
                 app:layout_constraintTop_toBottomOf="@id/label_description"
                 tools:targetApi="o" />
 
@@ -130,10 +130,33 @@
                 android:fontFamily="@font/poppins"
                 android:justificationMode="inter_word"
                 android:text="@string/onboarding_discover_description"
-                android:textSize="11sp"
+                android:textSize="15sp"
                 app:layout_constraintTop_toBottomOf="@id/label_history"
                 tools:targetApi="o" />
 
+            <TextView
+                android:id="@+id/product_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="100dp"
+                android:fontFamily="@font/poppins_bold"
+                android:justificationMode="inter_word"
+                android:text="@string/product_title_catalog"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/tv_history_batik"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:targetApi="o" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                tools:itemCount="20"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_scrapping"
+                app:layout_constraintTop_toBottomOf="@id/product_title"
+                app:layout_constraintStart_toStartOf="@id/product_title"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
