--- a/app/src/main/res/layout/activity_detail_post.xml
+++ b/app/src/main/res/layout/activity_detail_post.xml
@@ -64,7 +64,7 @@
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/poppins"
                 android:text="@string/username"
-                android:textSize="14sp"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="@id/detail_image_profile"
                 app:layout_constraintStart_toEndOf="@id/detail_image_profile"
                 app:layout_constraintTop_toTopOf="@id/detail_image_profile" />
@@ -92,13 +92,37 @@
                 android:id="@+id/detail_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins"
                 android:justificationMode="inter_word"
                 android:text="@string/onboarding_discover_description"
-                android:textSize="11sp"
+                android:textSize="20sp"
                 app:layout_constraintTop_toBottomOf="@id/tag_name"
                 tools:targetApi="o" />
+
+            <TextView
+                android:id="@+id/product_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="100dp"
+                android:fontFamily="@font/poppins_bold"
+                android:justificationMode="inter_word"
+                android:text="@string/product_title"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/detail_description"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:targetApi="o" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                tools:itemCount="20"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_scrapping"
+                app:layout_constraintTop_toBottomOf="@id/product_title"
+                app:layout_constraintStart_toStartOf="@id/product_title"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
